--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "NODE_ENV=development nodemon app.js",
+    "prod": "NODE_ENV=production node app.js"
   },
   "keywords": [],
   "author": "",
@@ -18,7 +19,9 @@
     "express-validator": "^6.15.0",
     "http-errors": "^2.0.0",
     "jsonwebtoken": "^9.0.0",
+    "mongodb": "^5.1.0",
     "mongoos": "^0.0.1-security",
+    "mongoose": "^7.0.1",
     "multer": "^1.4.5-lts.1"
   }
 }
