all user cass medelwares, routing , tamplate complite

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,11 @@
 {
     "cSpell.words": [
         "middlewares"
-    ]
+    ],
+    "[html]": {
+        "editor.suggest.insertMode": "replace",
+        "editor.formatOnSave": false
+
+    }
+    
 }
