add user router and maddlewares and controler ok

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,11 +1,11 @@
 {
-    "cSpell.words": [
-        "middlewares"
-    ],
-    "[html]": {
-        "editor.suggest.insertMode": "replace",
-        "editor.formatOnSave": false
-
-    }
-    
+  "cSpell.words": [
+    "filesize",
+    "middlewares",
+    "uploade"
+  ],
+  "[html]": {
+    "editor.suggest.insertMode": "replace",
+    "editor.formatOnSave": false
+  }
 }
